
 589.	[bug]		The server could deadlock if a zone was updated
			while being transferred out.

 581.	[bug]		Log severity was not being correctly processed.
			[RT #485]

 574.	[bug]		TSIG signed queries sent by the resolver would fail to
			have their responses validated and would leak memory.

 573.	[bug]		The journal files of IXFRed slave zones were
			inadvertantly discarded on server reload, causing
			"journal out of sync with zone" errors on subsequent
			reloads. [RT #482]

 572.	[bug]		Quoted strings were not accepted as key names in
			address match lists.

 555.	[bug]		Slave server attempting zone transfer could crash
			with an assertion failure on certain malformed
			responses from the master. [RT #457]

 554.	[bug]		In some cases, not all of the dnssec tools were
			properly installed.

 553.	[bug]		Incoming zone transfers deferred due to quota 
			were not started when quota was increased but 
			only when a transfer in progress finished. [RT #456]

 552.	[bug]		We were not correctly detecting the end of all c-style
			comments.  [RT #455]

	--- 9.0.1 released ---

 547.	[bug]		dnssafe doesn't correctly handle RSA keys longer
			than 2000 bits.  Disable support for long keys.

	--- 9.0.1rc2 released ---

 527.	[bug]		When a hint zone was configured, the spurious warning
			messages "Hint zones do not have a forward field" and
			"Hint zones do not have a forwarders field" were
			printed. [RT #439]

	--- 9.0.1rc1 released ---

 526.	[bug]		nsupdate incorrectly refused to add RRs with a TTL
			of 0.

 523.	[doc]		The source to the Administrator Reference Manual is
			now an XML file using the DocBook DTD, and is included
			in the distribution.  The plain text version of the
			ARM is temporarily unavailable while we figure out
			how to generate readable plain text from the XML.

 520.	[bug]		Upgraded libtool to 1.3.5, which makes shared
			library builds almost work on AIX (and possibly 
			others).
